// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render left arrow 1`] = `
<button
  className="Arrow left"
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
/>
`;

exports[`Render right arrow 1`] = `
<button
  className="Arrow right"
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
/>
`;
